tests/tooling/fixtures/native/execution/negative/loop_control_continue_outside_loop.objc3
// Negative execution fixture: compile should fail on continue used outside of a loop body.
module LoopControlContinueOutsideLoop;

fn main() -> i32 {
  continue;
  return 0;
}
